# clinfo

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  GNUmakefile  LICENSE  Makefile  Makefile.win  README  README.md  TODO  fetch-opencl-dev-win.cmd  fetch-opencl-vcpkg-win.cmd  make.cmd  new-version.sh
.github/workflows/: build.yml
man/: clinfo.1
man1/: clinfo.1
src/: cl_error.h  clinfo.c  ctx_prop.h  error.h  ext.h  fmtmacros.h  info_loc.h  info_ret.h  memory.h  ms_support.h  opt_out.h  strbuf.h
